--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,7 @@
 .nav-link {
-    transition: .15s;
+  transition: 0.15s;
 }
 .nav-link:hover {
-    background-color:#007bff;
-    color: white;
+  background-color: #007bff;
+  color: white;
 }
